<resources>
    <string name="app_name">TheCountries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="name">Name</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="timezone">Timezone</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="country_name">CountryName</string>
    <string name="somtheing_went_wrong">Somtheing went wrong</string>
</resources>